# zero-trust-mcp-gateway

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: policy.yaml  policy_demo.py
src/zero_trust_mcp_gateway/: __init__.py  decisions.py  models.py  rate_limit.py  redaction.py
src/zero_trust_mcp_gateway/audit/: __init__.py  logger.py
src/zero_trust_mcp_gateway/enforcement/: __init__.py  wrapper.py
src/zero_trust_mcp_gateway/layers/: _init__.py  audit.py  authorize.py  detect_attacks.py  rate_limit.py  redact.py  validate.py
src/zero_trust_mcp_gateway/pipeline/: __init__.py  context.py  pipeline.py
src/zero_trust_mcp_gateway/policy/: __init__.py  engine.py  loader.py  schema.py
